[Group] removendo todos os filtros de grupo desnecessários
