# server/src/group/src/routes.ts
@@ -3,10 +3,6 @@ import { Router } from "express";
 import { CreateGroupController } from "./controllers/CreateGroupController";
 import { ReadGroupByIdController } from "./controllers/ReadGroupByIdController";
 import { ReadGroupByTokenController } from "./controllers/ReadGroupByTokenController";
-import { ReadGroupByNameController } from "./controllers/ReadGroupByNameController";
-import { ReadGroupByCategoryController } from "./controllers/ReadGroupByCategoryController";
-import { ReadGroupBySubjectController } from "./controllers/ReadGroupBySubjectController";
-import { ReadGroupByLevelController } from "./controllers/ReadGroupByLevelController";
 import { ReadGroupByOwnerController } from "./controllers/ReadGroupByOwnerController";
 import { ReadAllGroupsController } from "./controllers/ReadAllGroupsController";
 import { UpdateGroupController } from "./controllers/UpdateGroupController";
@@ -17,10 +13,6 @@ const router = Router();
 const createGroupController = new CreateGroupController();
 const readGroupByIdController = new ReadGroupByIdController();
 const readGroupByTokenController = new ReadGroupByTokenController();
-const readGroupByNameController = new ReadGroupByNameController();
-const readGroupByCategoryController = new ReadGroupByCategoryController();
-const readGroupBySubjectController = new ReadGroupBySubjectController();
-const readGroupByLevelController = new ReadGroupByLevelController();
 const readGroupByOwnerController = new ReadGroupByOwnerController();
 const readAllGroupsController = new ReadAllGroupsController();
 const updateGroupController = new UpdateGroupController();
@@ -29,10 +21,6 @@ const deleteGroupController = new DeleteGroupController();
 router.post("/group/create", createGroupController.handle);
 router.get("/group/read/byId/:id", readGroupByIdController.handle);
 router.get("/group/read/byToken/:token", readGroupByTokenController.handle);
-router.get("/group/read/byName/:name", readGroupByNameController.handle);
-router.get("/group/read/byCategory/:category", readGroupByCategoryController.handle);
-router.get("/group/read/bySubject/:subjectLabel", readGroupBySubjectController.handle);
-router.get("/group/read/byLevel/:level", readGroupByLevelController.handle);
 router.get("/group/read/byOwner/:idUser", readGroupByOwnerController.handle);
 router.get("/group/read/all", readAllGroupsController.handle);
 router.put("/group/update/:id/:idUser", updateGroupController.handle);
