# server/swagger.yaml
@@ -305,104 +305,6 @@ paths:
           description: Bad Request
         '404':
           description: Not Found
-  /group/read/byName/{name}:
-    get:
-      tags:
-        - Group
-      summary: Busca uma lista de grupos com base em uma parte do nome
-      parameters:
-        - name: name
-          in: path
-          required: true
-          description: Nome do grupo
-          schema:
-            type: string
-            minimum: 1
-      description: Busca por parte do nome de grupos já registrados na plataforma e retorna uma lista deles ordenada pelo nome em ordem alfabética.
-      operationId: group_byName
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/group_read_all.Response'
-        '400':
-          description: Bad Request
-  /group/read/byCategory/{category}:
-    get:
-      tags:
-        - Group
-      summary: Busca uma lista de grupos com base em uma categoria
-      parameters:
-        - name: category
-          in: path
-          required: true
-          description: Categoria dos grupos
-          schema:
-            type: string
-            minimum: 1
-      description: Busca todos os grupos já registrados na plataforma que possuem uma determianda categoria e retorna uma lista deles ordenada pelo nome em ordem alfabética.
-      operationId: group_byCategory
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/group_read_all.Response'
-        '400':
-          description: Bad Request
-  /group/read/bySubject/{subject}:
-    get:
-      tags:
-        - Group
-      summary: Busca uma lista de grupos com base em um assunto
-      parameters:
-        - name: subject
-          in: path
-          required: true
-          description: Assunto dos grupos
-          schema:
-            type: string
-            minimum: 1
-      description: Busca todos os grupos já registrados na plataforma que possuem um determiando assunto e retorna uma lista deles ordenada pelo nome em ordem alfabética. Sem a quantidade de integrantes desse grupo.
-      operationId: group_bySubject
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/group_read_all.Response'
-        '400':
-          description: Bad Request
-  /group/read/byLevel/{level}:
-    get:
-      tags:
-        - Group
-      summary: Busca uma lista de grupos com base em um nível
-      parameters:
-        - name: level
-          in: path
-          required: true
-          description: Nível dos grupos
-          schema:
-            type: string
-            minimum: 1
-      description: Busca todos os grupos já registrados na plataforma que possuem um determiando nível e retorna uma lista deles ordenada pelo nome em ordem alfabética. Sem a quantidade de integrantes desse grupo.
-      operationId: group_byLevel
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/group_read_all.Response'
-        '400':
-          description: Bad Request
-        '406':
-          description: Not Acceptable
   /group/read/byOwner/{idUser}:
     get:
       tags:
